[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/menuDesat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/font_alphabet.tres" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Options/Keybinds/KeybindMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Options/BoolOption.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Options/StringOption.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Options/NumberOption.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Options/MenuOption.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 4 )

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.92549, 0.282353, 0.929412, 1 )
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="Pages" type="Node2D" parent="."]

[node name="Preferences" type="Node" parent="Pages"]

[node name="Downscroll" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "Makes all notes scroll downwards instead of upwards."
option = "downscroll"

[node name="Middlescroll" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "Makes all notes centered on-screen."
option = "middlescroll"

[node name="Botplay" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "The game plays itself for you when enabled.
Scores will not be saved with Botplay enabled."
option = "botplay"

[node name="Ghost Tapping" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "Allows you to press notes that don't exist when enabled."
option = "ghost-tapping"

[node name="Hitsound" parent="Pages/Preferences" instance=ExtResource( 7 )]
visible = false
description = "Change what sound plays when hitting a note."
option = "hitsound"
values = [ "None", "osu!", "Dave and Bambi", "Vine Boom", "Generic" ]

[node name="Scroll Speed" parent="Pages/Preferences" instance=ExtResource( 8 )]
visible = false
description = "Change how fast the notes go in a song.
(PRESS LEFT & RIGHT to change)"
option = "scroll-speed"
multiplier = 0.1
limits = [ 0, 10 ]

[node name="Scroll Speed Type" parent="Pages/Preferences" instance=ExtResource( 7 )]
visible = false
description = "Change how scroll speed is used in a song.
Multiplicative = Adds onto the speed, Constant = Directly sets the speed.
(PRESS LEFT & RIGHT to change)"
option = "scroll-type"
values = [ "Multiplicative", "Constant" ]

[node name="Memory Leaks" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "Loads every image, sound, song, etc all at once."
option = "memory-leaks"

[node name="Pussy Mode" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "Disables anti-mash and allows gaining health from sustains."
option = "pussy-mode"

[node name="Enable Insta-Kill Button" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "When enabled, pressing R will insta-kill you.
Disable if this causes annoyance."
option = "enable-insta-kill-button"

[node name="Go Back During Gameplay" parent="Pages/Preferences" instance=ExtResource( 6 )]
visible = false
description = "When enabled, pressing BACKSPACE/ESCAPE will exit the song
(without saving scores)."
option = "go-back-during-gameplay"

[node name="Sick Timing" parent="Pages/Preferences" instance=ExtResource( 8 )]
visible = false
description = "Change the milliseconds required to get a \"SiCK!!\"
Negative = Earlier, Positive = Later
(PRESS LEFT & RIGHT to change)"
option = "sick-timing"
multiplier = 0.1
limits = [ 0, 130 ]

[node name="Good Timing" parent="Pages/Preferences" instance=ExtResource( 8 )]
visible = false
description = "Change the milliseconds required to get a \"Good!\"
Negative = Earlier, Positive = Later
(PRESS LEFT & RIGHT to change)"
option = "good-timing"
multiplier = 0.1
limits = [ 0, 130 ]

[node name="Bad Timing" parent="Pages/Preferences" instance=ExtResource( 8 )]
visible = false
description = "Change the milliseconds required to get a \"Bad\"
Negative = Earlier, Positive = Later
(PRESS LEFT & RIGHT to change)"
option = "bad-timing"
multiplier = 0.1
limits = [ 0, 130 ]

[node name="Shit Timing" parent="Pages/Preferences" instance=ExtResource( 8 )]
visible = false
description = "Change the milliseconds required to get a \"SHiT\"
Negative = Earlier, Positive = Later
(PRESS LEFT & RIGHT to change)"
option = "shit-timing"
multiplier = 0.1
limits = [ 0, 130 ]

[node name="Appearance" type="Node" parent="Pages"]

[node name="Optimization" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "Removes all characters and stages for extra performance."
option = "optimization"

[node name="Note Splashes" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "When enabled, A splash/firework like effect will appear
when you hit a note and get a \"SiCK!!\"."
option = "note-splashes"

[node name="FPS Counter" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "When enabled, The FPS will show up at the top left of the screen."
option = "fps-counter"

[node name="Show Memory" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "When enabled, The amount of memory being used will show up at the top left of the screen."
option = "show-memory"

[node name="Show Memory Peak" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "When enabled, The max amount of memory used will show up at the top left of the screen."
option = "show-mem-peak"

[node name="Keybind Reminders" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "At the start of every song, You will be reminded
what your keybinds are."
option = "keybind-reminders"

[node name="VSync" parent="Pages/Appearance" instance=ExtResource( 6 )]
visible = false
description = "When enabled, The game's framerate will match
your monitor's refresh rate."
option = "vsync"

[node name="Clip Style" parent="Pages/Appearance" instance=ExtResource( 7 )]
visible = false
description = "Choose a style for sustain note clippings.
StepMania: Holds under Receptors - FNF: Holds over Receptors"
option = "sustain-clipping-style"
values = [ "FNF", "StepMania" ]

[node name="UI Skin" parent="Pages/Appearance" instance=ExtResource( 7 )]
visible = false
description = "Change how things like the arrows, countdown, and ratings look/sound."
option = "ui-skin"
values = [ "Default", "Circles" ]

[node name="Rating Camera" parent="Pages/Appearance" instance=ExtResource( 7 )]
visible = false
description = "Change if the ratings & combo appear on the
world camera or on the HUD camera."
option = "rating-camera"
values = [ "Game", "HUD" ]

[node name="Underlay Opacity" parent="Pages/Appearance" instance=ExtResource( 8 )]
visible = false
description = "When set above 0, A black box will appear behind the notes.
Helps with focusing on the notes."
option = "underlay-opacity"
multiplier = 0.1
limits = [ 0, 1 ]

[node name="Controls" type="Node" parent="Pages"]

[node name="1k Keybind" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 1 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="2k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 2 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="3k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 3 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="4k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 4 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="5k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 5 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="6k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 6 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="7k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 7 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="8k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 8 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="9k Keybinds" parent="Pages/Controls" instance=ExtResource( 9 )]
visible = false
description = "Change the bind used for 9 key.
(Press ACCEPT (ENTER/SPACE) to change)"

[node name="Adjust Offsets" type="Node" parent="Pages"]

[node name="Note Offset" parent="Pages/Adjust Offsets" instance=ExtResource( 8 )]
visible = false
description = "Change how early or late notes spawn.
Negative = Earlier, Positive = Later
(PRESS LEFT & RIGHT to change)"
option = "note-offset"
multiplier = 0.1
limits = [ -1000, 1000 ]

[node name="Rating & Combo Offset" parent="Pages/Adjust Offsets" instance=ExtResource( 9 )]
visible = false
description = "Change the positions of the Ratings & Combos.
(Press ACCEPT (ENTER/SPACE) to change)"
menu_to_load = "RatingOffsetMenu"
menu_category = "Options"

[node name="Misc" type="Node" parent="Pages"]

[node name="Tools Menu" parent="Pages/Misc" instance=ExtResource( 9 )]
visible = false
description = "Access a menu with useful tools like the
Chart Editor, XML Converter, etc."
menu_to_load = "ToolsMenu"

[node name="Options" type="Node2D" parent="."]

[node name="Bar" type="ColorRect" parent="."]
margin_top = 640.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.501961 )

[node name="MenuTemplate" type="Label" parent="Bar"]
visible = false
margin_top = 5.0
margin_right = 1600.0
margin_bottom = 92.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
text = "template"
align = 1

[node name="Menus" type="Node2D" parent="Bar"]

[node name="TabNotif" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Label" type="Label" parent="TabNotif"]
margin_top = 11.0
margin_right = 1280.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Press TAB to select a menu, and press TAB again to change options!"
align = 1

[node name="DescriptionBox" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 582.0
margin_right = 1271.0
margin_bottom = 628.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Label" type="Label" parent="DescriptionBox"]
margin_top = 9.0
margin_right = 1263.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Option Description"
align = 1
autowrap = true

[node name="LeftArrow" type="Label" parent="."]
margin_left = 189.0
margin_top = 645.0
margin_right = 235.0
margin_bottom = 732.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
text = "<"
align = 1

[node name="RightArrow" type="Label" parent="."]
margin_left = 1064.0
margin_top = 645.0
margin_right = 1110.0
margin_bottom = 732.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
text = ">"
align = 1

[node name="KeybindMenu" parent="." instance=ExtResource( 5 )]
visible = false
